[package]
name = "ttt-gear"
version = "0.1.0"
authors = ["b3zrazli4n0"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.1.2", default-features = false, features = [ "derive", "full" ] }
gstd = { git = "https://github.com/gear-tech/gear.git", features = [ "debug" ] }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git" }

[dev-dependencies]
gtest = { git = "https://github.com/gear-tech/gear.git" }